# ai-in-healthcare-high-risk-project

./: .claude.json  .gitignore  QUICKSTART.md  README.md  app.py  convert_evals.sh  datasets_config.json  datasets_info.md  download_data.py  json_to_csv.md  main.py  manage_datasets.py  mcp_config.json  mcp_server.py  pyproject.toml  requirements.txt  verify_conch_logic.py  verify_safe_tokenize.py  visualize_results.md
agent/: graph.py  state.py
docs/: CHANGELOG.md  DECISIONS.md  dataset_management.md  handoff.md
docs/prds/: PRD-001-session-recovery.md  PRD-002-path-portability.md  PRD-003-synthetic-data-labeling.md
docs/superpowers/plans/: 2026-04-13-week3-integration.md  2026-04-15-interactive-ensemble-implementation.md
eval/: Eval.md  adapters.py  all-summary.html  build_comparison_table.py  comparison_table.html  main.py  parse.py  pathmmu_reference.json  results_table.md
eval/configs/: default.yaml
eval/scripts/: all_models_mac.sh  biomedclip_mac.sh  clip_ensemble_mac.sh  clip_ensemble_mac2.sh  clip_ensemble_mac3.sh  clip_ensemble_mac4.sh  conch_mac.sh  ensemble_mac.sh  full_ensemble_mac.sh  medgemma_mac.sh  musk_mac.sh
load_test/: testall.ipynb
tests/: test_manage_datasets.py  test_model_executor.py
tools/: tool_dicom_parser.py  tool_hsi_parser.py  tool_iq_oth_parser.py  tool_model_executor.py  tool_oasis_parser.py  tool_quilt_parser.py
utils/: Cleanup.md  Generate.md  aggregate_summaries.py  cleanup_eval_outputs.py  file_picker.py  generate_table.py  json_to_csv.py  llm_client.py  manifest_generator.py  model_capabilities.py  model_utils.py  query_generator.py  run_chexagent.py  run_llava_med.py  visualize_results.py  viz_utils.py
week1/: _quilt1m_common.py  test_iq_oth.py  test_oasis1.py  test_pkg_hsi.py  test_quilt1m_laion.py  test_quilt1m_openpath.py  test_quilt1m_pubmed.py  test_quilt1m_quilt.py  test_spinal_dicom.py  test_spinal_nifti.py  week1.ipynb
week1/data/: quilt_1M_lookup.csv
week2/: biomedclip_results.json  chexagent_results.json  conch_results.json  llava_med_results.json  medgemma_results.json  musk_results.json  test_CheXagent-8b.ipynb  test_biomedclip.ipynb  test_conch.ipynb  test_llava-med.ipynb  test_medgemma-4b-it.ipynb  test_musk.ipynb  test_vit-alzheimer.ipynb  vit_alzheimer_results.json
workspace/mock_oasis/: sample.hdr  sample.img  sample.xml
(+58 files in other folders)
